tests/ui/structs-enums/struct-rec/issue-17431-3.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-3.rs:3:1
   |
LL | struct Foo { foo: Mutex<Option<Foo>> }
   | ^^^^^^^^^^                     --- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL | struct Foo { foo: Mutex<Option<Box<Foo>>> }
   |                                ++++   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0072`.
